# flair_alexa_service

./: .env  Cargo.toml  README.md  Rocket.toml  test.REST
src/: main.rs  routes.rs
src/guards/: signature.rs
src/handlers/: mod.rs  wrappers.rs
